<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/TableViewFL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    tools:context=".presentation.graphscreen.GraphFragment">

    <LinearLayout
        android:id="@+id/TableViewLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tableTitleTV"
            android:text="@string/table_with_coordinates_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pointsTableRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:layout_height="60dp"
            tools:listitem="@layout/item_table_cell" />

        <TextView
            android:id="@+id/graphTitleTV"
            android:text="@string/graph_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.yanchelenko.coordinateplaneapp.presentation.graphscreen.graphview.GraphView
            android:id="@+id/customViewGraph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#f0f0f0" />

        <Button
            android:id="@+id/saveFileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="25dp"
            android:text="@string/button_save_to_file" />

    </LinearLayout>

    <include
        android:id="@+id/errorView"
        layout="@layout/error_view" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:visibility="visible" />

</FrameLayout>
